[gd_scene load_steps=51 format=3 uid="uid://cx7ph4f4py1r2"]

[ext_resource type="PackedScene" uid="uid://4uc4euv1tilh" path="res://source/glb/headlessChicken.glb" id="1_kg3no"]
[ext_resource type="Script" uid="uid://7i2x3ia41kmf" path="res://scripts/player/playerGd.gd" id="2_1vbol"]
[ext_resource type="PackedScene" uid="uid://4pd2vbkd5axb" path="res://scenes/particle/fire_white.tscn" id="3_1vbol"]
[ext_resource type="Script" uid="uid://c7yv1ayxievc5" path="res://scripts/player/spring_arm_3d.gd" id="4_jip51"]
[ext_resource type="Animation" uid="uid://c765j2relgyl4" path="res://animations/charIdle.res" id="4_mx27v"]
[ext_resource type="Animation" uid="uid://d2ytqy4nq8y5v" path="res://animations/default.res" id="5_jfjv5"]
[ext_resource type="Animation" uid="uid://c8yc21i8ecljc" path="res://animations/runWIthSword.res" id="6_xbv8m"]
[ext_resource type="Animation" uid="uid://l0itidcisab6" path="res://animations/sheathSword.res" id="7_admug"]
[ext_resource type="Animation" uid="uid://dqw7tjqs3u8rr" path="res://animations/swordInwardSlash.res" id="8_4bcik"]
[ext_resource type="Animation" uid="uid://0bd7jd3k1caw" path="res://animations/swordOutwardSlash.res" id="9_jjj4c"]
[ext_resource type="Animation" uid="uid://btml7jh0ryelj" path="res://animations/walkBackwards.res" id="10_gfhmo"]
[ext_resource type="Animation" uid="uid://bj7e84uckkfre" path="res://animations/walkForward.res" id="11_nju7f"]
[ext_resource type="Animation" uid="uid://dbb0duny13eh8" path="res://animations/walkStrafeLeft.res" id="12_873gh"]
[ext_resource type="Animation" uid="uid://cq5riawjiutjc" path="res://animations/walkStrafeRight.res" id="13_jhxjg"]
[ext_resource type="Animation" uid="uid://jibouuradr4v" path="res://animations/withdrawSword.res" id="14_xdxf0"]
[ext_resource type="Animation" uid="uid://ix5u8disv73m" path="res://animations/fallingIdle.res" id="15_admug"]
[ext_resource type="Animation" uid="uid://ruo5lmr7ko4p" path="res://animations/jumpUp.res" id="16_4bcik"]
[ext_resource type="Animation" uid="uid://dn55gnkbgn231" path="res://animations/landing.res" id="17_jjj4c"]
[ext_resource type="Animation" uid="uid://ls83odbkkdd4" path="res://animations/jumpingFull.res" id="18_4bcik"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7pr1"]
_data = {
&"charIdle": ExtResource("4_mx27v"),
&"default": ExtResource("5_jfjv5"),
&"fallingIdle": ExtResource("15_admug"),
&"jumpUp": ExtResource("16_4bcik"),
&"jumpingFull": ExtResource("18_4bcik"),
&"landing": ExtResource("17_jjj4c"),
&"runWIthSword": ExtResource("6_xbv8m"),
&"sheathSword": ExtResource("7_admug"),
&"swordInwardSlash": ExtResource("8_4bcik"),
&"swordOutwardSlash": ExtResource("9_jjj4c"),
&"walkBackwards": ExtResource("10_gfhmo"),
&"walkForward": ExtResource("11_nju7f"),
&"walkStrafeLeft": ExtResource("12_873gh"),
&"walkStrafeRight": ExtResource("13_jhxjg"),
&"withdrawSword": ExtResource("14_xdxf0")
}

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_admug"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4bcik"]
animation = &"charAnim/fallingIdle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jjj4c"]
animation = &"charAnim/jumpUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gfhmo"]
animation = &"charAnim/landing"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_nju7f"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4bcik")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_jjj4c")
blend_point_1/pos = -1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_gfhmo")
blend_point_2/pos = 1.0

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_873gh"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_mx27v"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_jip51"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_jip51"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_wle02"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_mx27v"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jip51"]
animation = &"charAnim/walkBackwards"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p4sl1"]
animation = &"charAnim/walkForward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6qntj"]
animation = &"charAnim/walkStrafeRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_psck7"]
animation = &"charAnim/walkStrafeLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8fe0o"]
animation = &"charAnim/charIdle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_btlm8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_jip51")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_p4sl1")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_6qntj")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_psck7")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_8fe0o")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_jfjv5"]
filter_enabled = true
filters = [".", "Armature/Skeleton3D:DEF-breast.L", "Armature/Skeleton3D:DEF-breast.R", "Armature/Skeleton3D:DEF-f_index.01.L", "Armature/Skeleton3D:DEF-f_index.01.R", "Armature/Skeleton3D:DEF-f_index.02.L", "Armature/Skeleton3D:DEF-f_index.02.R", "Armature/Skeleton3D:DEF-f_index.03.L", "Armature/Skeleton3D:DEF-f_index.03.R", "Armature/Skeleton3D:DEF-f_middle.01.L", "Armature/Skeleton3D:DEF-f_middle.01.R", "Armature/Skeleton3D:DEF-f_middle.02.L", "Armature/Skeleton3D:DEF-f_middle.02.R", "Armature/Skeleton3D:DEF-f_middle.03.L", "Armature/Skeleton3D:DEF-f_middle.03.R", "Armature/Skeleton3D:DEF-f_pinky.01.L", "Armature/Skeleton3D:DEF-f_pinky.01.R", "Armature/Skeleton3D:DEF-f_pinky.02.L", "Armature/Skeleton3D:DEF-f_pinky.02.R", "Armature/Skeleton3D:DEF-f_pinky.03.L", "Armature/Skeleton3D:DEF-f_pinky.03.R", "Armature/Skeleton3D:DEF-f_ring.01.L", "Armature/Skeleton3D:DEF-f_ring.01.R", "Armature/Skeleton3D:DEF-f_ring.02.L", "Armature/Skeleton3D:DEF-f_ring.02.R", "Armature/Skeleton3D:DEF-f_ring.03.L", "Armature/Skeleton3D:DEF-f_ring.03.R", "Armature/Skeleton3D:DEF-forearm.L", "Armature/Skeleton3D:DEF-forearm.R", "Armature/Skeleton3D:DEF-hand.L", "Armature/Skeleton3D:DEF-hand.R", "Armature/Skeleton3D:DEF-shoulder.L", "Armature/Skeleton3D:DEF-shoulder.R", "Armature/Skeleton3D:DEF-spine.002", "Armature/Skeleton3D:DEF-spine.003", "Armature/Skeleton3D:DEF-spine.004", "Armature/Skeleton3D:DEF-spine.005", "Armature/Skeleton3D:DEF-spine.006", "Armature/Skeleton3D:DEF-thumb.01.L", "Armature/Skeleton3D:DEF-thumb.01.R", "Armature/Skeleton3D:DEF-thumb.02.L", "Armature/Skeleton3D:DEF-thumb.02.R", "Armature/Skeleton3D:DEF-thumb.03.L", "Armature/Skeleton3D:DEF-thumb.03.R", "Armature/Skeleton3D:DEF-upper_arm.L", "Armature/Skeleton3D:DEF-upper_arm.R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mx27v"]
animation = &"charAnim/default"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xbv8m"]
animation = &"charAnim/default"

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_mx27v"]

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_jfjv5"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ho3jx"]
animation = &"charAnim/runWIthSword"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_admug"]
animation = &"charAnim/sheathSword"

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_xbv8m"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ho3jx"]
graph_offset = Vector2(-857.3777, 207.3428)
nodes/output/position = Vector2(820, 180)
nodes/Speed/node = SubResource("AnimationNodeTimeScale_jip51")
nodes/Speed/position = Vector2(-720, 60)
nodes/WalkBlend/node = SubResource("AnimationNodeBlendSpace2D_btlm8")
nodes/WalkBlend/position = Vector2(-900, 40)
nodes/RunBlend/node = SubResource("AnimationNodeBlend2_jip51")
nodes/RunBlend/position = Vector2(-420, 100)
nodes/run/node = SubResource("AnimationNodeAnimation_ho3jx")
nodes/run/position = Vector2(-720, 260)
nodes/StartAttack/node = SubResource("AnimationNodeBlend2_wle02")
nodes/StartAttack/position = Vector2(640, 240)
nodes/attackTimed1/node = SubResource("AnimationNodeTimeSeek_mx27v")
nodes/attackTimed1/position = Vector2(120, 660)
nodes/attack1/node = SubResource("AnimationNodeAnimation_mx27v")
nodes/attack1/position = Vector2(-160, 720)
nodes/attack2/node = SubResource("AnimationNodeAnimation_xbv8m")
nodes/attack2/position = Vector2(-160, 880)
nodes/attackTimed2/node = SubResource("AnimationNodeTimeSeek_jfjv5")
nodes/attackTimed2/position = Vector2(120, 840)
nodes/ComboBlend/node = SubResource("AnimationNodeBlend2_mx27v")
nodes/ComboBlend/position = Vector2(300, 660)
nodes/WeaponBlend/node = SubResource("AnimationNodeBlend2_jfjv5")
nodes/WeaponBlend/position = Vector2(220, 260)
nodes/weaponEquip/node = SubResource("AnimationNodeAnimation_admug")
nodes/weaponEquip/position = Vector2(-300, 500)
nodes/weaponEquipSeek/node = SubResource("AnimationNodeTimeSeek_xbv8m")
nodes/weaponEquipSeek/position = Vector2(-80, 500)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_mx27v")
nodes/TimeScale/position = Vector2(100, 480)
nodes/AirMovement/node = SubResource("AnimationNodeBlendSpace1D_nju7f")
nodes/AirMovement/position = Vector2(-740, 440)
nodes/AirSeek/node = SubResource("AnimationNodeTimeSeek_873gh")
nodes/AirSeek/position = Vector2(-440, 360)
nodes/AirBlend/node = SubResource("AnimationNodeBlend2_admug")
nodes/AirBlend/position = Vector2(-120, 200)
node_connections = [&"output", 0, &"StartAttack", &"Speed", 0, &"WalkBlend", &"RunBlend", 0, &"Speed", &"RunBlend", 1, &"run", &"StartAttack", 0, &"WeaponBlend", &"StartAttack", 1, &"ComboBlend", &"attackTimed1", 0, &"attack1", &"attackTimed2", 0, &"attack2", &"ComboBlend", 0, &"attackTimed2", &"ComboBlend", 1, &"attackTimed1", &"WeaponBlend", 0, &"AirBlend", &"WeaponBlend", 1, &"TimeScale", &"weaponEquipSeek", 0, &"weaponEquip", &"TimeScale", 0, &"weaponEquipSeek", &"AirSeek", 0, &"AirMovement", &"AirBlend", 0, &"RunBlend", &"AirBlend", 1, &"AirSeek"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jip51"]

[sub_resource type="SphereShape3D" id="SphereShape3D_p4sl1"]

[sub_resource type="BoxMesh" id="BoxMesh_ho3jx"]

[sub_resource type="BoxMesh" id="BoxMesh_6qntj"]

[node name="headlessChicken" instance=ExtResource("1_kg3no")]
collision_mask = 14
script = ExtResource("2_1vbol")
equipment = ["res://scenes/weapon/Sword.tscn", null, null]

[node name="Armature" parent="." index="0"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(0.019862017, 0.8119708, -0.022368878)
bones/0/rotation = Quaternion(0.27945477, -0.37508196, 0.14041924, 0.8726404)
bones/2/rotation = Quaternion(-0.038893607, 0.021967988, -0.036615513, 0.9983306)
bones/3/rotation = Quaternion(-0.06293218, 0.07731798, -0.027236935, 0.99464554)
bones/4/rotation = Quaternion(0.20324056, 0.028090097, -0.023052098, 0.9784544)
bones/5/rotation = Quaternion(-0.094391994, 0.09883349, -0.009548942, 0.9905711)
bones/6/rotation = Quaternion(-0.09176809, -0.073349856, -0.014693153, 0.9929666)
bones/7/position = Vector3(0.017295126, 0.12986128, 0.07400655)
bones/7/rotation = Quaternion(-0.5060569, -0.46692717, -0.42247534, 0.58940655)
bones/8/position = Vector3(0.014143575, 0.18760002, -0.013976592)
bones/8/rotation = Quaternion(-0.18980588, 0.57031226, -0.4890168, 0.6321237)
bones/8/scale = Vector3(1.0056264, 0.9888418, 1.0056262)
bones/9/rotation = Quaternion(0.18334934, 0.115101576, -0.021360897, 0.97605246)
bones/9/scale = Vector3(1.0000341, 0.9972135, 1.0028447)
bones/10/rotation = Quaternion(0.030518916, -0.286273, 0.05161767, 0.95626986)
bones/10/scale = Vector3(0.9944652, 1.0111772, 0.99445796)
bones/11/rotation = Quaternion(0.063949466, 0.6705133, 0.01650122, 0.7389521)
bones/11/scale = Vector3(0.99999994, 0.99999964, 0.9999998)
bones/12/rotation = Quaternion(0.043086056, -0.23241581, -0.016847158, 0.9715157)
bones/12/scale = Vector3(1.0000001, 0.99999976, 0.99999994)
bones/13/rotation = Quaternion(0.043827396, 0.00012431257, -0.030384945, 0.998577)
bones/13/scale = Vector3(0.99999994, 0.9999996, 1)
bones/14/rotation = Quaternion(0.021139039, 0.65596676, -0.07914153, 0.75033146)
bones/15/rotation = Quaternion(0.10994858, -0.20043512, -0.0463991, 0.97241163)
bones/15/scale = Vector3(0.9999999, 1.0000029, 0.99999976)
bones/16/rotation = Quaternion(0.05198943, -0.025702938, -0.020914434, 0.9980977)
bones/16/scale = Vector3(0.99999976, 0.99999726, 0.99999994)
bones/17/rotation = Quaternion(0.17403129, 0.8219632, -0.18336369, 0.51036)
bones/17/scale = Vector3(0.99999994, 0.999996, 1.0000001)
bones/18/rotation = Quaternion(0.13912931, 0.0793469, 0.06822614, 0.9847295)
bones/18/scale = Vector3(0.9999999, 1.0000111, 1.0000001)
bones/19/rotation = Quaternion(0.06944345, -0.08872341, 0.048953846, 0.992426)
bones/19/scale = Vector3(0.99999994, 0.9999914, 0.9999996)
bones/20/rotation = Quaternion(0.06433345, 0.7289869, -0.161411, 0.6621071)
bones/20/scale = Vector3(1.0000001, 1.000001, 0.9999999)
bones/21/rotation = Quaternion(0.17061752, -0.10397918, -0.017458225, 0.97968024)
bones/21/scale = Vector3(1.0000001, 0.9999957, 1.0000001)
bones/22/rotation = Quaternion(0.120098084, -0.083996356, 0.0066358503, 0.98917997)
bones/23/rotation = Quaternion(0.24227741, 0.9361698, 0.25058788, -0.045753725)
bones/24/rotation = Quaternion(0.08705641, -0.18775156, 0.0056743734, 0.9783345)
bones/24/scale = Vector3(0.9999998, 0.99999726, 0.99999976)
bones/25/rotation = Quaternion(0.10909107, 0.09436688, -0.084188074, 0.98595464)
bones/25/scale = Vector3(0.9999998, 1.0000007, 0.9999999)
bones/30/position = Vector3(-0.017304951, 0.12986106, 0.07400658)
bones/30/rotation = Quaternion(-0.46973214, 0.5449248, 0.4183106, 0.5544592)
bones/31/position = Vector3(-0.014143478, 0.18760006, -0.013976307)
bones/31/rotation = Quaternion(-0.41775763, -0.6819862, 0.33821678, 0.49596646)
bones/31/scale = Vector3(1.0137172, 0.97311956, 1.0137169)
bones/32/rotation = Quaternion(0.4175326, 0.0651329, -0.029870652, 0.90583235)
bones/32/scale = Vector3(1.0000894, 0.97695917, 1.0243255)
bones/33/rotation = Quaternion(0.3056767, 0.16492686, 0.052606404, 0.9362657)
bones/33/scale = Vector3(0.9880181, 1.0136276, 0.9993227)
bones/34/rotation = Quaternion(0.22216827, -0.6429106, 0.23438361, 0.6945298)
bones/35/rotation = Quaternion(0.50945586, 0.10612238, 0.24670234, 0.817515)
bones/35/scale = Vector3(1.0000004, 0.999997, 1.0000011)
bones/36/rotation = Quaternion(0.0438267, -0.00012435246, 0.030386273, 0.998577)
bones/36/scale = Vector3(1, 1.0000026, 0.99999994)
bones/37/rotation = Quaternion(0.24187402, -0.6078903, 0.29796487, 0.69511384)
bones/38/rotation = Quaternion(0.51449364, 0.16614842, 0.22729744, 0.8099549)
bones/38/scale = Vector3(1.0000001, 0.9999967, 1.0000004)
bones/39/rotation = Quaternion(0.051989555, 0.025702963, 0.020915013, 0.9980977)
bones/39/scale = Vector3(1, 1.0000035, 0.99999994)
bones/40/rotation = Quaternion(-0.3212578, 0.76835525, -0.24933678, -0.49422157)
bones/40/scale = Vector3(1.0000002, 0.9999965, 1)
bones/41/rotation = Quaternion(0.3290042, 0.0008629281, -0.20507336, 0.92179203)
bones/41/scale = Vector3(1.0000006, 1.0000057, 1.0000012)
bones/42/rotation = Quaternion(0.06944434, 0.088723585, -0.048951887, 0.99242604)
bones/42/scale = Vector3(0.99999994, 0.9999952, 0.9999997)
bones/43/rotation = Quaternion(0.36826047, -0.641128, 0.3237374, 0.5903671)
bones/43/scale = Vector3(0.99999994, 0.99999946, 1.0000004)
bones/44/rotation = Quaternion(0.40635744, 0.130717, 0.022878276, 0.9040262)
bones/44/scale = Vector3(1.0000001, 0.99999934, 1.0000004)
bones/45/rotation = Quaternion(0.120099515, 0.08399618, -0.006638001, 0.9891798)
bones/45/scale = Vector3(0.9999997, 1.0000011, 0.99999994)
bones/47/rotation = Quaternion(-0.057067916, -0.5547011, -0.45070738, 0.69707453)
bones/48/rotation = Quaternion(0.16092706, -0.09684531, 0.050119784, 0.9809238)
bones/48/scale = Vector3(0.9999997, 0.9999999, 1)
bones/49/rotation = Quaternion(0.110602155, -0.09357978, 0.08219021, 0.98602986)
bones/49/scale = Vector3(1, 0.99999964, 1)
bones/53/position = Vector3(0.112012126, -0.004556514, -0.040445257)
bones/53/rotation = Quaternion(1.6910906e-08, 0.6969362, 0.71713316, 9.159548e-08)
bones/54/position = Vector3(-0.112022, -0.004556677, -0.040445272)
bones/54/rotation = Quaternion(1.6910906e-08, 0.6969362, 0.71713316, 9.159548e-08)
bones/55/rotation = Quaternion(0.18472639, 0.78956544, 0.32215592, -0.48854688)
bones/57/position = Vector3(0.123737924, -0.018663777, 0.061799165)
bones/57/rotation = Quaternion(0.7882739, 0.36957327, 0.0051892134, 0.49194822)
bones/57/scale = Vector3(1.0139154, 0.9727406, 1.0139153)
bones/58/rotation = Quaternion(0.3505743, -0.4007616, 0.16762714, 0.8296922)
bones/58/scale = Vector3(0.9987943, 0.9817602, 1.0206828)
bones/59/rotation = Quaternion(-0.5071977, 0.04762567, 0.15334836, 0.84673893)
bones/59/scale = Vector3(0.9893891, 0.99449277, 1.0168719)
bones/60/rotation = Quaternion(-7.10975e-05, 0.97446823, -0.2245253, -0.00047803312)
bones/60/scale = Vector3(0.9998186, 1.0002589, 0.9999227)
bones/61/position = Vector3(-0.11259171, -0.03152976, 0.05458012)
bones/61/rotation = Quaternion(0.8431484, -0.27156657, -0.03262574, 0.46291244)
bones/61/scale = Vector3(1.0163388, 0.9681068, 1.0163387)
bones/62/rotation = Quaternion(0.45965242, 0.105872825, -0.055256892, 0.88003254)
bones/62/scale = Vector3(0.9985696, 0.9710413, 1.0323706)
bones/63/rotation = Quaternion(-0.71100134, 0.11349698, -0.17614141, 0.671245)
bones/63/scale = Vector3(0.9925896, 0.9853478, 1.0229931)
bones/64/rotation = Quaternion(-0.00012942747, 0.97445977, -0.22456165, -0.00046559196)
bones/64/scale = Vector3(0.9998932, 1.000152, 0.9999545)

[node name="HeadBone" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(0.9414137, -0.18059322, -0.28482676, 0.042575702, 0.90143, -0.430826, 0.3345559, 0.39345866, 0.8563072, -0.14394335, 1.3997885, 0.16435127)
bone_name = "DEF-spine.005"
bone_idx = 5

[node name="Fire_white" parent="Armature/Skeleton3D/HeadBone" index="0" instance=ExtResource("3_1vbol")]
transform = Transform3D(0.9968041, 0.026470788, 0.07537454, -0.04138431, 0.9781408, 0.20378529, -0.06833245, -0.2062529, 0.9761105, 0.014351491, 0.07728994, -0.029583871)

[node name="HandBone" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="1"]
unique_name_in_owner = true
transform = Transform3D(-0.717355, -0.6972414, -0.046818748, 0.3734438, -0.40012547, 0.8184445, -0.58479714, 0.6293296, 0.54521936, -0.6228693, 0.89383936, -0.100236215)
bone_name = "DEF-hand.R"
bone_idx = 33

[node name="HandPivot" type="Node3D" parent="Armature/Skeleton3D/HandBone" index="0"]
unique_name_in_owner = true
transform = Transform3D(0.9589318, -0.28340772, -0.011390547, 0.044571467, 0.1902278, -0.9807277, 0.28011256, 0.9399433, 0.19504741, -0.020831823, 0.08700991, -0.018785834)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
unique_name_in_owner = true
libraries = {
&"charAnim": SubResource("AnimationLibrary_l7pr1")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
tree_root = SubResource("AnimationNodeBlendTree_ho3jx")
anim_player = NodePath("../AnimationPlayer")
parameters/Speed/scale = 1.0
parameters/WalkBlend/blend_position = Vector2(0, 0)
parameters/RunBlend/blend_amount = 0.0
parameters/StartAttack/blend_amount = 0.0
parameters/attackTimed1/seek_request = -1.0
parameters/attackTimed2/seek_request = -1.0
parameters/ComboBlend/blend_amount = 1.0
parameters/WeaponBlend/blend_amount = 0.0
parameters/weaponEquipSeek/seek_request = -1.0
parameters/TimeScale/scale = 2.0
parameters/AirMovement/blend_position = -1.0
parameters/AirSeek/seek_request = -1.0
parameters/AirBlend/blend_amount = 0.0

[node name="CollisionWorld" type="CollisionShape3D" parent="." index="3"]
unique_name_in_owner = true
transform = Transform3D(1, -9.778887e-09, 0, 6.7520887e-09, 0.99999994, 0, 0, 7.450581e-09, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_jip51")

[node name="CollisionWorld2" type="CollisionShape3D" parent="." index="4"]
unique_name_in_owner = true
transform = Transform3D(1, -1.35041756e-08, 1.5092097e-16, 1.3504177e-08, 0.9999999, -1.4901163e-08, 5.030698e-17, 1.4901161e-08, 1, -9.778887e-09, 2, 7.450581e-09)
shape = SubResource("CapsuleShape3D_jip51")
disabled = true

[node name="SpringArm3D" type="SpringArm3D" parent="." index="5"]
unique_name_in_owner = true
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0, 1.2582402, -0.20610142)
collision_mask = 4
shape = SubResource("SphereShape3D_p4sl1")
spring_length = 5.0
script = ExtResource("4_jip51")

[node name="Camera3D" type="Camera3D" parent="SpringArm3D" index="0"]

[node name="StairBelowRayCast3D" type="RayCast3D" parent="." index="6"]
unique_name_in_owner = true
target_position = Vector3(0, -0.75, 0)
collision_mask = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="StairBelowRayCast3D" index="0"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -0.75, 0)
mesh = SubResource("BoxMesh_ho3jx")

[node name="StairAheadRayCast3D" type="RayCast3D" parent="." index="7"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, -0.76322514)
target_position = Vector3(0, -0.55, 0)
collision_mask = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="StairAheadRayCast3D" index="0"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("BoxMesh_6qntj")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
